--- a/Road to Recovery/pages/locationForm.html
+++ b/Road to Recovery/pages/locationForm.html
@@ -99,7 +99,7 @@
                         $("#activeLocation").attr('disabled', 'disabled');
                         $("#ManagerLastName").attr('disabled', 'disabled');
                         $("#ManagerName").attr('disabled', 'disabled');
-                        $("#saveCustomer").attr('disabled', 'disabled');
+                        $("#saveLocation").attr('disabled', 'disabled');
 
                     }
                 }
@@ -195,48 +195,7 @@
         </div>
         <!-- Top Bar End -->
         <!-- ========== Right Sidebar Start ========== -->
-        <div class="left side-menu">
-
-            <div class="sidebar-inner slimscrollleft">
-
-                <div id="sidebar-menu">
-
-                    <ul>
-                        <li>
-                            <a href="viewVolunteer.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול מתנדבים</span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="viewPatient.html" class="waves-effect waves-primary">
-                                <i class="md md-recent-actors"></i><span> ניהול חולים</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="viewRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span>כל ההסעות</span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="manageRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול ההסעות שלי</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="waves-effect waves-primary" onclick="deleteCookie()">
-                                <i class="md md-remove-circle-outline"></i><span>התנתקות מהמערכת</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="clearfix"></div>
-                </div>
-
-                <div class="clearfix"></div>
-            </div>
-
-        </div>
+        <div w3-include-html="menu.html"></div>
         <!-- Right Sidebar End -->
         <!-- ============================================================== -->
         <!-- Start page Content here -->
@@ -426,7 +385,7 @@
                                         <!--<table id="jqGrid" class="table table-striped table-bordered text-right"></table>-->
                                         <!--<div id="jqGridPager"></div>-->
                                         <div class="text-right m-t-30 row">
-                                            <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
+                                            <button type="submit" id="saveLocation" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
                                         </div>
                                     </div>
                                 </div>
@@ -451,11 +410,13 @@
     <script>
         var resizefunc = [];
     </script>
-
+    <script src="lib/includeHTML.js"></script>
     <!--Validators-->
     <script src="../plugins/jquery-validation/dist/jquery.validate.min.js"></script>
     <script>
         $(document).ready(function () {
+
+            includeHTML();
             //datePicker();
             //generateCities();
             //generateVolTypes();
@@ -549,7 +510,20 @@
 
                         },
                         error: function (err) {
-                            alert("Error in setLocation: " + err.responseText);
+                            if (err.responseText.indexOf("PRIMARY KEY")>=0) {
+                                swal({
+                                    title: "מיקום בעל שם זהה כבר קיים",
+                                    type: "error",
+                                    timer: 3000,
+                                    showConfirmButton: false
+                                });
+                            }
+                            else (swal({
+                                title: "אירעה שגיאה במערכת. המיקום לא התווסף",
+                                type: "error",
+                                timer: 3000,
+                                showConfirmButton: false
+                            }));
                         }
                     });
                     //END OF Insert Product Code
@@ -593,15 +567,16 @@
             }
             else { type = true; }
 
-            var phoneCheck = false;
+            var phoneCheck = true;
             if ($("#phone1").val() != "") {
                 var checkPhone1 = $("#phone1").val();
                 var phoneReg = new RegExp("0\\d{2}-\\d{7}$|0\\d{1}-\\d{7}$");
                 var phoneMatch = phoneReg.test(checkPhone1);
                 if (!phoneMatch) {
+                    phoneCheck = false;
                     alert("הטלפון הראשי שהוזן אינו חוקי");
                 }
-                else phoneCheck = true;
+                 
             }
 
             if (!area || !type || !phoneCheck) { //|| !jdateMatch
