--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -44,11 +44,13 @@
     <!-- Select2 css+js -->
     <link href="assets/css/select2.css" rel="stylesheet" />
     <script src="assets/js/select2.min.js"></script>
-
+    <script src="lib/includeHTML.js"></script>
 
     <script>
         checkCookie();
         $(document).ready(function () {
+
+        includeHTML();
             //adds menu.html content into any "#menu" element
             //$('#menu').load('menu.html');
 
@@ -99,8 +101,8 @@
                         }
 
 
-                        t.row.add([arr_volunteers[i].DisplayName, arr_volunteers[i].TypeVol, arr_volunteers[i].CellPhone, arr_volunteers[i].HomePhone,arr_volunteers[i].City, arr_volunteers[i].Email, btnStr]).draw(false);         
-                       
+                        t.row.add([arr_volunteers[i].DisplayName, arr_volunteers[i].TypeVol, arr_volunteers[i].CellPhone, arr_volunteers[i].HomePhone,arr_volunteers[i].City, arr_volunteers[i].Email, btnStr]).draw(false);
+
                     }
 
                     //$('#datatable-buttons').DataTable({
@@ -255,48 +257,7 @@
         </div>
         <!-- Top Bar End -->
         <!-- ========== Right Sidebar Start ========== -->
-        <div class="left side-menu">
-
-            <div class="sidebar-inner slimscrollleft">
-
-                <div id="sidebar-menu">
-
-                    <ul>
-                        <li>
-                            <a href="viewVolunteer.html" class="waves-effect waves-primary">
-                                <i class="md md-person"></i><span> ניהול מתנדבים</span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="viewPatient.html" class="waves-effect waves-primary">
-                                <i class="md md-recent-actors"></i><span> ניהול חולים</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="viewRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> כל ההסעות</span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="manageRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול ההסעות שלי</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="waves-effect waves-primary" onclick="deleteCookie()">
-                                <i class="md md-remove-circle-outline"></i><span>התנתקות מהמערכת</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="clearfix"></div>
-                </div>
-
-                <div class="clearfix"></div>
-            </div>
-
-        </div>
+        <div w3-include-html="menu.html"></div>
         <!-- Right Sidebar End -->
         <!-- ============================================================== -->
         <!-- Start page Content here -->
